# ai-scholar-suite

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  test_api_client.py  test_research_generation.py
.github/: ci.yml
docs/: api.md  architecture.md  configuration.md  development.md  tools.md
src/: __init__.py  config.py  main.py
src/agents/: paper_agent.py
src/api/: server.py
src/core/: session_manager.py  state_manager.py
src/models/: schemas.py
src/tools/: arxiv_search.py  folder_reader.py  outline_builder.py  pdf_writer.py  reference_manager.py  section_writer.py  web_search.py
tests/: test_config.py  test_folder_reader.py  test_main.py  test_outline_builder.py  test_paper_agent.py  test_pdf_writer.py  test_reference_manager.py  test_schemas.py  test_section_writer.py  test_server.py  test_session_manager.py  test_state_manager.py
